[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprite/Main/UI/Battle_player/charslctr1.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Level_One/Battle_Player/player_one.gd" type="Script" id=3]
[ext_resource path="res://Sprite/Main/UI/Battle_player/face #3.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Main/UI/Battle_player/charcrd1 #3.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Main/UI/Battle_player/chrborder #3.png" type="Texture" id=6]
[ext_resource path="res://Sprite/Main/UI/Battle_player/mpbar #1.png" type="Texture" id=7]
[ext_resource path="res://Sprite/Main/UI/Battle_player/lvlbg #1.png" type="Texture" id=8]
[ext_resource path="res://Sprite/Main/UI/Battle_player/namebar #1.png" type="Texture" id=9]
[ext_resource path="res://Sprite/Main/UI/Battle_player/hpbar #1.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 7
font_data = ExtResource( 1 )

[node name="battle_player" type="Node2D"]
script = ExtResource( 3 )
health = 96

[node name="back_ground" type="Sprite" parent="."]
scale = Vector2( 0.180028, 0.123124 )
texture = ExtResource( 2 )
centered = false

[node name="back_ground_2" type="Sprite" parent="."]
scale = Vector2( 0.178698, 0.187103 )
texture = ExtResource( 5 )
centered = false

[node name="player_boarder" type="Sprite" parent="."]
position = Vector2( 19, 20 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="player_image" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 24, 24 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_name" type="Sprite" parent="."]
position = Vector2( 58, 8 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="Hp" type="Sprite" parent="."]
position = Vector2( 58, 20 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Mp" type="Sprite" parent="."]
position = Vector2( 58, 34 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 38.3086
margin_top = 1.11362
margin_right = 70.3086
margin_bottom = 45.1136
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_name" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 32.0
margin_bottom = 12.0
rect_min_size = Vector2( 32, 12 )
custom_fonts/font = SubResource( 1 )
text = "Player "
align = 1
valign = 1

[node name="Player_health" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 32.0
margin_bottom = 12.0
rect_min_size = Vector2( 32, 12 )
custom_fonts/font = SubResource( 2 )
text = "hp"

[node name="Player_selected" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 32.0
margin_bottom = 12.0
rect_min_size = Vector2( 32, 12 )
custom_fonts/font = SubResource( 3 )

[node name="player_level" type="Sprite" parent="."]
position = Vector2( 11.4101, 30.3511 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )
[connection signal="pressed" from="player_image" to="." method="_on_player_image_pressed"]
